# Optimal_networks

./: .gitignore  README.md  dask_config.py  generative.py  generative_aal.ipynb  generative_analysis.ipynb  generative_multiobj.ipynb  job.sbatch  job.sh  navigation_game.py  navigation_game_tests.py  playground.ipynb  pyproject.toml  simulation_try.py  temp.py  tests_generative.py  tests_navigation_game.py  utils.py
