[project]
name = "optimal-networks"
version = "0.1.0"
description = "connecting dots, but goodly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "networkx>=3.4.2",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "psutil>=6.1.1",
    "pulp>=2.9.0",
    "pytest>=8.3.4",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
