[project]
name = "optimal-networks"
version = "0.1.0"
description = "connecting dots, but goodly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.1.0",
    "distributed>=2025.1.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "networkx>=3.4.2",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "psutil>=6.1.1",
    "pulp>=2.9.0",
    "pyswarms>=1.3.0",
    "pytest>=8.3.4",
    "scikit-optimize>=0.10.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "vizman>=0.2.2",
]
